--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
     "@igniteui/material-icons-extended": "^2.10.0",
+    "@ngrx/store": "^14.3.2",
+    "@ngrx/store-devtools": "^14.3.2",
     "bootstrap": "^5.2.2",
     "fflate": "^0.7.3",
     "hammerjs": "^2.0.8",
